@@ -37,20 +37,24 @@ import uk.gov.hmcts.reform.civil.model.IdamUserDetails;
 import uk.gov.hmcts.reform.civil.model.Party;
 import uk.gov.hmcts.reform.civil.model.ServedDocumentFiles;
 import uk.gov.hmcts.reform.civil.model.StatementOfTruth;
-import uk.gov.hmcts.reform.civil.model.common.Element;
-import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
+import uk.gov.hmcts.reform.civil.model.common.Element;
+import uk.gov.hmcts.reform.civil.prd.model.Organisation;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder;
 import uk.gov.hmcts.reform.civil.sampledata.PartyBuilder;
 import uk.gov.hmcts.reform.civil.service.DeadlinesCalculator;
 import uk.gov.hmcts.reform.civil.service.ExitSurveyContentService;
+import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.FeesService;
 import uk.gov.hmcts.reform.civil.service.OrganisationService;
 import uk.gov.hmcts.reform.civil.service.Time;
+import uk.gov.hmcts.reform.civil.service.flowstate.SimpleStateFlowEngine;
 import uk.gov.hmcts.reform.civil.service.flowstate.StateFlowEngine;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
+import uk.gov.hmcts.reform.civil.service.flowstate.TransitionsTestConfiguration;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
+import uk.gov.hmcts.reform.civil.stateflow.simplegrammar.SimpleStateFlowBuilder;
 import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 import uk.gov.hmcts.reform.civil.utils.CaseFlagsInitialiser;
 import uk.gov.hmcts.reform.civil.utils.CourtLocationUtils;
@@ -61,7 +65,6 @@ import uk.gov.hmcts.reform.civil.validation.PostcodeValidator;
 import uk.gov.hmcts.reform.civil.validation.ValidateEmailService;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
-import uk.gov.hmcts.reform.civil.prd.model.Organisation;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -71,7 +74,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.lang.String.format;
@@ -92,8 +94,8 @@ import static uk.gov.hmcts.reform.civil.enums.AllocatedTrack.INTERMEDIATE_CLAIM;
 import static uk.gov.hmcts.reform.civil.enums.AllocatedTrack.MULTI_CLAIM;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
-import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimCallbackHandler.CONFIRMATION_SUMMARY;
 import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimCallbackHandler.CONFIRMATION_BODY_LIP_COS;
+import static uk.gov.hmcts.reform.civil.handler.callback.user.CreateClaimCallbackHandler.CONFIRMATION_SUMMARY;
 import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.PartyUtils.getPartyNameBasedOnType;
@@ -109,12 +111,14 @@ import static uk.gov.hmcts.reform.civil.utils.PartyUtils.getPartyNameBasedOnType
     ExitSurveyContentService.class,
     InterestCalculator.class,
     JacksonAutoConfiguration.class,
-    LocationRefDataService.class,
+    LocationReferenceDataService.class,
     MockDatabaseConfiguration.class,
     OrgPolicyValidator.class,
     StateFlowEngine.class,
+    SimpleStateFlowEngine.class,
+    SimpleStateFlowBuilder.class,
+    TransitionsTestConfiguration.class,
     PostcodeValidator.class,
-    StateFlowEngine.class,
     ValidationAutoConfiguration.class,
     ValidateEmailService.class,
     OrganisationService.class,
@@ -160,7 +164,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
     private DeadlinesCalculator deadlinesCalculator;
 
     @MockBean
-    private LocationRefDataService locationRefDataService;
+    private LocationReferenceDataService locationRefDataService;
 
     @MockBean
     private CourtLocationUtils courtLocationUtility;
@@ -208,8 +212,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnError_whenIndividualDateOfBirthIsInTheFuture() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().plusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -222,8 +226,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnError_whenSoleTraderDateOfBirthIsInTheFuture() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().plusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -236,8 +240,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnNoError_whenIndividualDateOfBirthIsInThePast() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().minusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -250,8 +254,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnNoError_whenSoleTraderDateOfBirthIsInThePast() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant1(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().minusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -270,8 +274,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnError_whenIndividualDateOfBirthIsInTheFuture() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().plusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -284,8 +288,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnError_whenSoleTraderDateOfBirthIsInTheFuture() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().plusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().plusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -298,8 +302,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnNoError_whenIndividualDateOfBirthIsInThePast() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .individualDateOfBirth(now().minusDays(1))
-                                .build())
+                    .individualDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -312,8 +316,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         void shouldReturnNoError_whenSoleTraderDateOfBirthIsInThePast() {
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft()
                 .applicant2(PartyBuilder.builder().individual()
-                                .soleTraderDateOfBirth(now().minusDays(1))
-                                .build())
+                    .soleTraderDateOfBirth(now().minusDays(1))
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
 
@@ -353,8 +357,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldReturnNoErrors_whenParticularOfClaimsFieldsAreValid() {
             CaseData caseData = caseDataBuilder.servedDocumentFiles(ServedDocumentFiles.builder()
-                                                                        .particularsOfClaimText("Some string")
-                                                                        .build()).build();
+                .particularsOfClaimText("Some string")
+                .build()).build();
             CallbackParams params = callbackParamsOf(caseData, MID, pageId);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -409,7 +413,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             List<String> actualPbas = dynamicList.getListItems().stream()
                 .map(DynamicListElement::getLabel)
-                .collect(Collectors.toList());
+                .toList();
 
             assertThat(actualPbas).containsOnly("12345", "98765");
             assertThat(dynamicList.getValue()).isEqualTo(DynamicListElement.EMPTY);
@@ -500,7 +504,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 List<String> courtlist = dynamicList.getListItems().stream()
                     .map(DynamicListElement::getLabel)
-                    .collect(Collectors.toList());
+                    .toList();
 
                 assertThat(courtlist).containsOnly("Site 1 - Lane 1 - 123", "Site 2 - Lane 2 - 124");
             }
@@ -546,8 +550,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                 .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                    .email("email@example.com")
-                                                    .build())
+                    .email("email@example.com")
+                    .build())
                 .build();
             CallbackParams params = callbackParamsOf(caseData, MID, PAGE_ID);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -720,7 +724,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             assertThat(response.getErrors()).containsExactly(
                 "The legal representative details for the claimant and defendant are the same.  "
-                     + "Please amend accordingly.");
+                    + "Please amend accordingly.");
         }
 
         @Test
@@ -835,7 +839,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             assertThat(response.getErrors()).containsExactly(
                 "The legal representative details for the claimant and defendant are the same.  "
-                     + "Please amend accordingly.");
+                    + "Please amend accordingly.");
         }
 
         @Test
@@ -858,7 +862,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             assertThat(response.getErrors()).containsExactly(
                 "The legal representative details for the claimant and defendant are the same.  "
-                     + "Please amend accordingly.");
+                    + "Please amend accordingly.");
         }
 
         @Test
@@ -913,7 +917,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData caseData = CaseDataBuilder.builder().build();
 
             Organisation organisation = Organisation.builder()
-                                                    .organisationIdentifier("1")
+                .organisationIdentifier("1")
                 .companyNumber("1")
                 .name("Organisation1")
                 .build();
@@ -997,7 +1001,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
         }
 
@@ -1030,7 +1034,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
                 assertThat(response.getErrors()).containsExactly("Enter an email address in the correct format,"
-                                                                     + " for example john.smith@example.com");
+                    + " for example john.smith@example.com");
             }
         }
     }
@@ -1084,8 +1088,8 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             when(featureToggleService.isMultiOrIntermediateTrackEnabled(any())).thenReturn(true);
             CaseData caseDataUpdated = CaseDataBuilder.builder().atStateClaimDraft()
                 .claimValue(ClaimValue.builder()
-                           .statementOfValueInPennies(BigDecimal.valueOf(10000001))
-                           .build())
+                    .statementOfValueInPennies(BigDecimal.valueOf(10000001))
+                    .build())
                 .build();
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(callbackParamsOf(V_1, caseDataUpdated, ABOUT_TO_SUBMIT));
             assertThat(response.getData()).containsEntry("allocatedTrack", MULTI_CLAIM.name());
@@ -1262,16 +1266,17 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             var respondent2OrgPolicy = response.getData().get("respondent2OrganisationPolicy");
 
-            assertThat(respondent2OrgPolicy).doesNotHaveToString("OrgPolicyReference");
-            assertThat(respondent2OrgPolicy).doesNotHaveToString("Organisation");
+            assertThat(respondent2OrgPolicy)
+                .doesNotHaveToString("OrgPolicyReference")
+                .doesNotHaveToString("Organisation");
         }
 
         @Test
         void shouldAssignCaseName1v2_whenCaseIs1v2() {
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v2_andNotifyBothSolicitors().build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData().get("caseNameHmctsInternal"))
                 .isEqualTo("'John Rambo' v 'Sole Trader', 'John Rambo'");
@@ -1281,10 +1286,10 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Test
         void shouldAssignCaseName2v1_whenCaseIs2v1() {
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimSubmitted2v1RespondentRegistered().build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData().get("caseNameHmctsInternal"))
                 .isEqualTo("'John Rambo', 'Jason Rambo' v 'Sole Trader'");
@@ -1294,10 +1299,10 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Test
         void shouldAssignCaseName1v1_whenCaseIs1v1() {
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimNotified_1v1().build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData().get("caseNameHmctsInternal"))
                 .isEqualTo("'John Rambo' v 'Sole Trader'");
@@ -1316,10 +1321,10 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
         @Test
         void shouldsetClaimTypeFromClaimTypeUnspec_when_sdoR2Enabled() {
 
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build();
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build();
             when(featureToggleService.isSdoR2Enabled()).thenReturn(true);
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
             assertThat(response.getData())
                 .containsEntry("claimType", ClaimType.CLINICAL_NEGLIGENCE.name());
         }
@@ -1406,17 +1411,17 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             @Test
             void shouldAddIdamEmailToIdamDetails_whenIdamEmailIsCorrect() {
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                                                       .email(EMAIL)
-                                                       .correct(YES)
-                                                       .build())
+                        .email(EMAIL)
+                        .correct(YES)
+                        .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                        .email(DIFFERENT_EMAIL)
-                                                        .build())
+                        .email(DIFFERENT_EMAIL)
+                        .build())
                     .build();
 
-                params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+                params = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
                 assertThat(response.getData())
@@ -1435,18 +1440,18 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                 given(idamClient.getUserDetails(any()))
                     .willReturn(UserDetails.builder().email(EMAIL).id(userId).build());
 
-                CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+                CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                     .applicantSolicitor1CheckEmail(CorrectEmail.builder()
-                                                       .email(EMAIL)
-                                                       .correct(NO)
-                                                       .build())
+                        .email(EMAIL)
+                        .correct(NO)
+                        .build())
                     .applicantSolicitor1UserDetails(IdamUserDetails.builder()
-                                                        .email(DIFFERENT_EMAIL)
-                                                        .build())
+                        .email(DIFFERENT_EMAIL)
+                        .build())
                     .build();
 
-                CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+                CallbackParams localParams = callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT);
+                var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(localParams);
 
                 assertThat(response.getData())
                     .doesNotHaveToString("applicantSolicitor1CheckEmail")
@@ -1502,13 +1507,13 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             @Test
             void oneVTwo() {
-                CaseData caseData = CaseDataBuilder.builder()
+                CaseData localCaseData = CaseDataBuilder.builder()
                     .atStateClaimDraft()
                     .multiPartyClaimTwoDefendantSolicitors()
                     .build();
 
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                    callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                    callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
                 assertThat(response.getData())
                     .containsEntry("allPartyNames", "Mr. John Rambo V Mr. Sole Trader, Mr. John Rambo");
@@ -1516,13 +1521,13 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             @Test
             void twoVOne() {
-                CaseData caseData = CaseDataBuilder.builder()
+                CaseData localCaseData = CaseDataBuilder.builder()
                     .atStateClaimDraft()
                     .multiPartyClaimTwoApplicants()
                     .build();
 
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                    callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                    callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
                 assertThat(response.getData())
                     .containsEntry("allPartyNames", "Mr. John Rambo, Mr. Jason Rambo V Mr. Sole Trader");
@@ -1564,47 +1569,47 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Test
         void shouldUpdateCaseListAndUnassignedListData() {
-            CaseData caseData = CaseDataBuilder.builder()
+            CaseData localCaseData = CaseDataBuilder.builder()
                 .atStateClaimDraft()
                 .multiPartyClaimTwoDefendantSolicitors()
                 .applicant1OrganisationPolicy(OrganisationPolicy.builder()
-                                                  .orgPolicyReference("CLAIMANTREF1")
-                                                  .build())
+                    .orgPolicyReference("CLAIMANTREF1")
+                    .build())
                 .respondent1OrganisationPolicy(OrganisationPolicy.builder()
-                                                   .orgPolicyReference("DEFENDANTREF1")
-                                                   .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
-                                                                     .organisationID("QWERTY R").build())
-                                                   .build())
+                    .orgPolicyReference("DEFENDANTREF1")
+                    .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
+                        .organisationID("QWERTY R").build())
+                    .build())
                 .respondent2OrganisationPolicy(OrganisationPolicy.builder()
-                                                   .orgPolicyReference("DEFENDANTREF2")
-                                                   .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
-                                                                     .organisationID("QWERTY R2").build())
-                                                   .build())
+                    .orgPolicyReference("DEFENDANTREF2")
+                    .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
+                        .organisationID("QWERTY R2").build())
+                    .build())
                 .build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData())
                 .containsEntry("unassignedCaseListDisplayOrganisationReferences",
-                               "CLAIMANTREF1, DEFENDANTREF1, DEFENDANTREF2");
+                    "CLAIMANTREF1, DEFENDANTREF1, DEFENDANTREF2");
             assertThat(response.getData())
                 .containsEntry("caseListDisplayDefendantSolicitorReferences", "6789, 01234");
         }
 
         @Test
         void shouldUpdateRespondent1Organisation1IDCopySameSol() {
-            CaseData caseData = CaseDataBuilder.builder()
+            CaseData localCaseData = CaseDataBuilder.builder()
                 .atStateClaimIssued1v2AndSameRepresentative()
                 .respondent1OrganisationPolicy(OrganisationPolicy.builder()
-                                                   .orgPolicyReference("DEFENDANTREF1")
-                                                   .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
-                                                                     .organisationID("QWERTY R").build())
-                                                   .build())
+                    .orgPolicyReference("DEFENDANTREF1")
+                    .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
+                        .organisationID("QWERTY R").build())
+                    .build())
                 .build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData())
                 .extracting("respondent1OrganisationIDCopy")
@@ -1616,26 +1621,26 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         @Test
         void shouldUpdateRespondent1And2Organisation1IDCopy() {
-            CaseData caseData = CaseDataBuilder.builder()
+            CaseData localCaseData = CaseDataBuilder.builder()
                 .atStateClaimDraft()
                 .multiPartyClaimTwoDefendantSolicitors()
                 .applicant1OrganisationPolicy(OrganisationPolicy.builder()
-                                                  .orgPolicyReference("CLAIMANTREF1")
-                                                  .build())
+                    .orgPolicyReference("CLAIMANTREF1")
+                    .build())
                 .respondent1OrganisationPolicy(OrganisationPolicy.builder()
-                                                   .orgPolicyReference("DEFENDANTREF1")
-                                                   .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
-                                                                     .organisationID("QWERTY R").build())
-                                                   .build())
+                    .orgPolicyReference("DEFENDANTREF1")
+                    .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
+                        .organisationID("QWERTY R").build())
+                    .build())
                 .respondent2OrganisationPolicy(OrganisationPolicy.builder()
-                                                   .orgPolicyReference("DEFENDANTREF2")
-                                                   .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
-                                                                     .organisationID("QWERTY R2").build())
-                                                   .build())
+                    .orgPolicyReference("DEFENDANTREF2")
+                    .organisation(uk.gov.hmcts.reform.ccd.model.Organisation.builder()
+                        .organisationID("QWERTY R2").build())
+                    .build())
                 .build();
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
             assertThat(response.getData())
                 .extracting("respondent1OrganisationIDCopy")
@@ -1674,13 +1679,13 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             @Test
             void oneVOne() {
-                CaseData caseData = CaseDataBuilder.builder()
+                CaseData localCaseData = CaseDataBuilder.builder()
                     .atStateClaimDraft()
                     .respondent2OrganisationPolicy(null)
                     .build();
 
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                    callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                    callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
                 assertThat(response.getData())
                     .extracting("respondent2OrganisationPolicy")
@@ -1694,14 +1699,14 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
             @Test
             void unrepresentedDefendants() {
-                CaseData caseData = CaseDataBuilder.builder()
+                CaseData localCaseData = CaseDataBuilder.builder()
                     .atStateClaimSubmittedNoRespondentRepresented()
                     .respondent1OrganisationPolicy(null)
                     .respondent2OrganisationPolicy(null)
                     .build();
 
                 var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                    callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                    callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
 
                 assertThat(response.getData())
                     .extracting("respondent1OrganisationPolicy")
@@ -1725,18 +1730,18 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
         static Stream<Arguments> caseDataStream() {
             DocumentWithRegex documentRegex = new DocumentWithRegex(Document.builder()
-                                                                        .documentUrl("fake-url")
-                                                                        .documentFileName("file-name")
-                                                                        .documentBinaryUrl("binary-url")
-                                                                        .build());
+                .documentUrl("fake-url")
+                .documentFileName("file-name")
+                .documentBinaryUrl("binary-url")
+                .build());
             List<Element<DocumentWithRegex>> documentList = new ArrayList<>();
             List<Element<Document>> documentList2 = new ArrayList<>();
             documentList.add(element(documentRegex));
             documentList2.add(element(Document.builder()
-                                          .documentUrl("fake-url")
-                                          .documentFileName("file-name")
-                                          .documentBinaryUrl("binary-url")
-                                          .build()));
+                .documentUrl("fake-url")
+                .documentFileName("file-name")
+                .documentBinaryUrl("binary-url")
+                .build()));
 
             var documentToUpload = ServedDocumentFiles.builder()
                 .particularsOfClaimDocument(documentList2)
@@ -1762,15 +1767,15 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             CaseData updatedData = objMapper.convertValue(response.getData(), CaseData.class);
             // Then
             assertThat(updatedData.getServedDocumentFiles().getParticularsOfClaimDocument().get(0).getValue()
-                           .getCategoryID()).isEqualTo("particularsOfClaim");
+                .getCategoryID()).isEqualTo("particularsOfClaim");
             assertThat(updatedData.getServedDocumentFiles().getMedicalReport().get(0).getValue().getDocument()
-                           .getCategoryID()).isEqualTo("particularsOfClaim");
+                .getCategoryID()).isEqualTo("particularsOfClaim");
             assertThat(updatedData.getServedDocumentFiles().getScheduleOfLoss().get(0).getValue().getDocument()
-                           .getCategoryID()).isEqualTo("particularsOfClaim");
+                .getCategoryID()).isEqualTo("particularsOfClaim");
             assertThat(updatedData.getServedDocumentFiles().getCertificateOfSuitability().get(0).getValue().getDocument()
-                           .getCategoryID()).isEqualTo("particularsOfClaim");
+                .getCategoryID()).isEqualTo("particularsOfClaim");
             assertThat(updatedData.getServedDocumentFiles().getOther().get(0).getValue().getDocument()
-                           .getCategoryID()).isEqualTo("particularsOfClaim");
+                .getCategoryID()).isEqualTo("particularsOfClaim");
 
         }
 
@@ -1793,13 +1798,13 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
             ServedDocumentFiles servedDocumentFiles = ServedDocumentFiles.builder()
                 .particularsOfClaimText("Some string").build();
 
-            CaseData caseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
+            CaseData localCaseData = CaseDataBuilder.builder().atStateClaimDraft().build().toBuilder()
                 .uploadParticularsOfClaim(YES)
                 .servedDocumentFiles(servedDocumentFiles)
                 .build();
             // When
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(
-                callbackParamsOf(caseData, ABOUT_TO_SUBMIT));
+                callbackParamsOf(localCaseData, ABOUT_TO_SUBMIT));
             CaseData updatedData = objMapper.convertValue(response.getData(), CaseData.class);
             // Then
             assertThat(updatedData.getServedDocumentFiles().getParticularsOfClaimDocument()).isNull();
@@ -1823,14 +1828,12 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
 
                 SubmittedCallbackResponse response = (SubmittedCallbackResponse) handler.handle(params);
 
-                LocalDateTime serviceDeadline = now().plusDays(112).atTime(23, 59);
-
                 String body = format(
                     CONFIRMATION_BODY_LIP_COS,
                     format("/cases/case-details/%s#Service%%20Request", CASE_ID),
                     format("/cases/case-details/%s#CaseDocuments", CASE_ID),
                     responsePackLink
-                )  + exitSurveyContentService.applicantSurvey();
+                ) + exitSurveyContentService.applicantSurvey();
 
                 assertThat(response).usingRecursiveComparison().isEqualTo(
                     SubmittedCallbackResponse.builder()
@@ -1919,7 +1922,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     format("/cases/case-details/%s#Service%%20Request", CASE_ID),
                     format("/cases/case-details/%s#CaseDocuments", CASE_ID),
                     responsePackLink
-                )  + exitSurveyContentService.applicantSurvey();
+                ) + exitSurveyContentService.applicantSurvey();
 
                 assertThat(response).usingRecursiveComparison().isEqualTo(
                     SubmittedCallbackResponse.builder()
@@ -1949,7 +1952,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                             format("/cases/case-details/%s#Service%%20Request", CASE_ID),
                             format("/cases/case-details/%s#CaseDocuments", CASE_ID),
                             responsePackLink
-                        )  + exitSurveyContentService.applicantSurvey())
+                        ) + exitSurveyContentService.applicantSurvey())
                         .build());
             }
         }
@@ -1968,7 +1971,7 @@ class CreateClaimCallbackHandlerTest extends BaseCallbackHandlerTest {
                     format("/cases/case-details/%s#Service%%20Request", CASE_ID),
                     format("/cases/case-details/%s#CaseDocuments", CASE_ID),
                     responsePackLink
-                )  + exitSurveyContentService.applicantSurvey();
+                ) + exitSurveyContentService.applicantSurvey();
 
                 assertThat(response).usingRecursiveComparison().isEqualTo(
                     SubmittedCallbackResponse.builder()
